fix issue with scrolling on mobile

--- a/components/confirmationView.module.css
+++ b/components/confirmationView.module.css
@@ -1,6 +1,6 @@
 .container {
-  height: 100vh;
   padding: 60px 120px;
+  min-height: 100vh;
 
   display: flex;
   flex-direction: column;
